@@ -18,7 +18,10 @@ __svnid__ = "$Id$"
 __revision__ = "$Revision$"
 
 #-----------------------------------------------------------------------------#
-# Dependencies
+# Imports
+import re
+
+# Local imports
 import synglob
 
 #-----------------------------------------------------------------------------#
@@ -195,6 +198,37 @@ def CommentPattern(lang_id=0):
         return [u'/*', u'*/']
 
 #---- End Required Functions ----#
+
+def AutoIndenter(stc, pos, ichar):
+    """Auto indent cpp code. uses \n the text buffer will
+    handle any eol character formatting.
+    @param stc: EditraStyledTextCtrl
+    @param pos: current carat position
+    @param ichar: Indentation character
+    @return: string
+
+    """
+    rtxt = u''
+    line = stc.GetCurrentLine()
+    text = stc.GetTextRange(stc.PositionFromLine(line), pos)
+
+    indent = stc.GetLineIndentation(line)
+    if ichar == u"\t":
+        tabw = stc.GetTabWidth()
+    else:
+        tabw = stc.GetIndent()
+
+    i_space = indent / tabw
+    ndent = u"\n" + ichar * i_space
+    rtxt = ndent + ((indent - (tabw * i_space)) * u' ')
+
+    cdef_pat = re.compile('(public|private|protected)\s*\:')
+    case_pat = re.compile('(case\s+.+|default)\:')
+    text = text.strip()
+    if text.endswith('{') or cdef_pat.match(text) or case_pat.match(text):
+        rtxt += ichar
+
+    return rtxt
 
 #---- Syntax Modules Internal Functions ----#
 def KeywordString():
