@@ -21,6 +21,7 @@ __revision__ = "$Revision$"
 
 #-----------------------------------------------------------------------------#
 import synglob
+from cpp import AutoIndenter
 
 #-----------------------------------------------------------------------------#
 
